# mycon

./: CMakeLists.txt  LICENSE
src/: main.c  pico_w.h
src/display/: font.c  ili9225.c  tft.c  tft.h
